Velcro test First SandBox/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Alert_when_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends and alert to creator user when task is completd by the assigned person</description>
        <inlineHelpText>Sends and alert to creator user when task is completd by the assigned person.</inlineHelpText>
        <label>Alert when completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_User_Region__c</fullName>
        <formula>CreatedBy.Region__c</formula>
        <label>Created User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, 
IF(CONTAINS( Subject , &quot;E-Mail&quot;), &quot;Email&quot;,
IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, 
IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, 
IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, 
IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, 
IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;,
IF(CONTAINS( Location, &quot;zoom&quot;),&quot;Zoom Meeting&quot;, 
IF(NOT(ISBLANK(Location)), &quot;On Site Visit&quot;, 
&quot;Other&quot;
)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Company__c</fullName>
        <formula>Owner:User.CompanyName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_call_Objectives__c</fullName>
        <label>Pre-call Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Region__c</fullName>
        <formula>Owner:User.Region__c</formula>
        <label>Assigned User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Message_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Message Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Status__c</fullName>
        <label>Smart Email Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>